# tmdb-api

./: Cargo.toml
src/: client.rs  error.rs  prelude.rs
src/certification/: list.rs  mod.rs
src/changes/: list.rs  mod.rs
src/collection/: details.rs  mod.rs
src/common/: country.rs  credits.rs  image.rs  keyword.rs  language.rs  mod.rs  release_date.rs  status.rs  video.rs
src/company/: alternative_names.rs  details.rs  images.rs  mod.rs
src/genre/: list.rs  mod.rs
src/movie/: alternative_titles.rs  changes.rs  credits.rs  details.rs  external_ids.rs  images.rs  keywords.rs  latest.rs  lists.rs  mod.rs  now_playing.rs  popular.rs  recommendations.rs  release_dates.rs  reviews.rs  search.rs  similar.rs  top_rated.rs  translations.rs  upcoming.rs  videos.rs  watch_providers.rs
src/people/: details.rs  mod.rs
src/tvshow/: details.rs  images.rs  latest.rs  mod.rs  popular.rs  search.rs  similar.rs  watch_providers.rs
src/tvshow/episode/: details.rs
src/tvshow/season/: details.rs
src/watch_provider/: list.rs  mod.rs
