[package]
name = "tmdb-api"
description = "Yet another TMDB client. This one is using async methods."
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
version = "0.7.0"
edition = "2021"
repository = "https://github.com/jdrouet/tmdb-api"
license = "MIT"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["commands"]
commands = ["dep:reqwest"]
ts = ["dep:ts-rs"]

# only used for testing
integration = []
ts-rs = ["dep:ts-rs"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "std",
] }
tokio = { version = "1.35.1", default-features = false, optional = true }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "tokio-rustls",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
ts-rs = { version = "8.0.0", optional = true, features = ["chrono-impl"] }
serde_repr = { version = "0.1" }
thiserror = "1.0.58"

[dev-dependencies]
mockito = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.21", features = ["full"] }
